      Glock for spotting the bug).

2006-10-16 David Moore <dcm@acm.org>
    * Migrated from CVS to SVN
    * Changed Version_2_0 to the default branch (HEAD)
    * Modified directory structure (libdc1394 -> dc1394)
    * Changed default tarball filename to libdc1394
    * Changed the get_data_depth() functions to compute a guess when the
      register is not available (thanks to AgBr and Daniel Westhoff for
      finding this one).
	
2006-10-10 Damien <ddouxchamps@users.sf.net>
    * added new conversion functions that work on dc1394video_frame_t.

2006-10-20 David Moore <dcm@acm.org>
    * added new example program grab_partial_image_dma
    * converted octlet_t/quadlet_t/nodeid_t to uint64_t/uint32_t/uint16_t

2006-10-23 David Moore <dcm@acm.org>
    * fixed math error in computing timestamps during capture

2006-11-02 Damien Douxchamps<ddouxchamps@users.sf.net>
    * applied 3 patches from Daniel Drake for AVT functions:
       1. new functions that write/read more than one register at a time
       2. correct shading control and fully implement it
       3. read/write shading images
	
2006-11-03 Damien Douxchamps<ddouxchamps@users.sf.net>
    * Release 2.0.0-pre4
	
2006-11-03 Damien Douxchamps<ddouxchamps@users.sf.net>
    * Create more handles to avoid conflicts in the grabselfid function
      (thanks to Irv Elshoff)
    * Added the function dc1394_format7_get_roi()

2006-11-08 David Moore <dcm@acm.org>
    * Fixed Mac OS X regression caused by 2006-11-02 patches
	
2006-11-17 Damien Douxchamps<ddouxchamps@users.sf.net>
    * Fixed the number of memory channels detected (Thanks to Georg Glock)

2006-11-23 Damien Douxchamps<ddouxchamps@users.sf.net>
    * Removed legacy raw1394 code
    * Removed references to DMA since all capture functions are now DMA
    * Renamed DC1394_VIDEO1394_* to DC1394_CAPTURE_POLICY_*
    * Enqueue and Dequeue functions now both return an error code
    * Adapted the examples
    * Removed the two DMA examples